[metadata]
name = pymashup
version = attr: pymashup.__version__
description = pymashup
long_description = file: README.md
long_description_content_type = text/markdown
author = DigiDuncan
author_email = digiduncan@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
keywords = 
project_urls =
    Source=https://github.com/digiduncan/pymashup
    Tracker=https://github.com/digiduncan/pymashup/issues

[options]
packages = find:
python_requires = >=3.10
zip_safe = yes
include_package_data = True
install_requires =
    requests==2.26.0
    

[options.extras_require]
dev =
    pytest==6.2.5
    flake8==4.0.1
    autopep8==1.5.7

[options.entry_points]
console_scripts =
    pymashup = pymashup.main:main

[flake8]
ignore = E501,W503
per-file-ignores =
    */__init__.py:F401,F403
